Implement neural network training and prediction functionality
- Added main method to App class for testing neural network
- Created training loop with backpropagation for neural network
- Enhanced Layer and Neuron classes with improved weight initialization and backpropagation logic
- Introduced softmax function for output layer processing